[package]
name = "peach-probe"
version = "0.1.0"
authors = ["Andrew Reid <gnomad@cryptolab.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
env_logger = "0.6.1"
log = "0.4.0"
jsonrpc-core = "14.2"
jsonrpc-client-http = "0.5"
jsonrpc-client-core = "0.5"
jsonrpc-test = "14.2"
snafu = "0.4.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
peach-lib = { git = "https://github.com/peachcloud/peach-lib", branch = "main" }
#peach-lib = { path = "../peach-lib" }
clap = "2.33.3"
const_format = "0.2.10"


